<resources>
    <string name="app_name">Kisaan Bazaar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip ></string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_description">Wholesale exports from your Nearest Warehouse. Fresh Products Directly from the Farmers with Easy Discounts and offers on Large Sales.</string>
    <string name="top_sales">Top Sales</string>
    <string name="top_sales_desc">Curated From Our Fresh Farm</string>
    <string name="categories">Categories</string>
    <string name="offers">Offers</string>
    <string name="favourites">Favourites</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="kisan_example_com">kisan@example.com</string>
    <string name="product">Product</string>
    <string name="news">News</string>
    <string name="chats">Chats</string>
    <string name="accounts">Accounts</string>
    <string name="home">Home</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>


</resources>
