<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".Activities.LoginActivity">



    <RelativeLayout
        android:id="@+id/skip_buttonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        style="@style/SelectableItemBackground"
        android:foreground="?android:selectableItemBackground"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/skip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/skip"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textStyle="bold" />

        <View
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:background="@color/black"
            android:layout_below="@+id/skip_text"/>

    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/logo_card"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="75dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/green_gradient">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_foreground"
                android:layout_centerInParent="true"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/logo_card">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/black"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/grey"
            android:layout_centerInParent="true"
            android:layout_below="@+id/app_name"
            android:text="@string/app_description"/>


    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/google_buttonId"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        android:clickable="true"
        android:focusable="true"
        style="@style/SelectableItemBackground"
        app:cardBackgroundColor="@color/white"
        android:foreground="?android:selectableItemBackground"
        android:layout_above="@+id/facebook_buttonId"
        android:layout_marginBottom="8dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/continue_with_google"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:textSize="14sp"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google_logo"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="28dp"/>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/facebook_buttonId"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:layout_above="@+id/phone_buttonId"
        android:layout_marginBottom="8dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/facebook_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/continue_with_facebook"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_logo"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="28dp"/>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/phone_buttonId"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/green_gradient">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/continue_with_phone"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone_logo"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="28dp"/>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>